snake-app/ingress.yml
apiVersion: v1
kind: Service
metadata:
  name: snake-service
spec:
  selector:
    app: snake-app
  ports:
  - name: http
    port: 80
    targetPort: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: snake-ingress
spec:
  rules:
  - host: snake-app.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: snake-service
            port:
              name: http
